--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "@sparticuz/chromium": "^141.0.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-query": "^5.62.7",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
     "openai": "^4.73.0",
+    "puppeteer-core": "^23.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.14.1",
@@ -40,6 +42,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "puppeteer": "^24.31.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
